@@ -6,6 +6,7 @@ On the road for v0.4.6 (Nausicaa2)
 ===============================================================================
 
 2007-02-20  Gilles Dumortier <dgil at ieee.org>
+	* Matrix View : display a mark for traded quotes (SF bug 1660985)
 	* Term period and Risk level per line : properties of the portfolio
 	* View Stops : do not display portfolio information for a quote not in
 	  the portfolio !
